@@ -28,6 +28,10 @@ Bug Fixes
   ``UnboundLocalError``.
   (Andrew Bennetts, #423563)
 
+* Use osutils.O_NOINHERIT for some files on win32 to avoid PermissionDenied
+  errors.
+  (Inada Naoki, #524560)
+
 Documentation
 *************
 
